--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-router-dom": "^6.26.2",
     "react-split": "^2.0.14",
     "recharts": "^2.12.7",
+    "rehype-highlight": "^7.0.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
