--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "node server.js",
-    "terminal": "node terminal-server.js"
+    "terminal": "node terminal-server.cjs",
+    "start": "concurrently \"npm run server\" \"npm run terminal\" \"vite\""
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -42,6 +43,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@react-oauth/google": "^0.12.2",
     "@tanstack/react-query": "^5.56.2",
     "@types/uuid": "^10.0.0",
     "@xterm/addon-fit": "^0.10.0",
